@@ -1,0 +1,2 @@
+.. automodule:: fs.expose.importhook
+    :members:
